--- a/config/cable.yml
+++ b/config/cable.yml
@@ -2,9 +2,8 @@ development:
   adapter: async
 
 test:
-  adapter: test
+  adapter: async
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: freemarket_sample_63c_production
+  url: redis://localhost:6379/1
