--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,5 @@ test:
 production:
   <<: *default
   database: freemarket_sample_63c_production
-  username: root
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  socket: /var/lib/mysql/mysql.sock
+  username: freemarket_sample_63c
+  password: <%= ENV['FREEMARKET_SAMPLE_63C_DATABASE_PASSWORD'] %>
